# SignatureDemo

./: .gitattributes  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zto/scott/signaturedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zto/scott/signaturedemo/: MainActivity.java  PackageUtils.java
app/src/main/res/layout/: content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zto/scott/signaturedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libsignature/: CMakeLists.txt  build.gradle
libsignature/src/main/: AndroidManifest.xml
libsignature/src/main/cpp/: native.cpp
libsignature/src/main/cpp/include/: data_lock.h  log.h  native.h
libsignature/src/main/cpp/zip/: zip_add.c  zip_add_dir.c  zip_add_entry.c  zip_buffer.c  zip_close.c  zip_delete.c  zip_dir_add.c  zip_dirent.c  zip_discard.c  zip_entry.c  zip_err_str.c  zip_error.c  zip_error_clear.c  zip_error_get.c  zip_error_get_sys_type.c  zip_error_strerror.c  zip_error_to_str.c  zip_extra_field.c  zip_extra_field_api.c  zip_fclose.c  zip_fdopen.c  zip_file_add.c  zip_file_error_clear.c  zip_file_error_get.c  zip_file_get_comment.c  zip_file_get_external_attributes.c  zip_file_get_offset.c  zip_file_rename.c  zip_file_replace.c  zip_file_set_comment.c  zip_file_set_external_attributes.c  zip_file_set_mtime.c  zip_file_strerror.c  zip_filerange_crc.c  zip_fopen.c  zip_fopen_encrypted.c  zip_fopen_index.c  zip_fopen_index_encrypted.c  zip_fread.c  zip_get_archive_comment.c  (+59 more)
libsignature/src/main/java/com/zto/encrypt/: DataLock.java
libsignature/src/main/java/com/zto/libsignature/: SignatureUtil.java
libsignature/src/main/res/values/: strings.xml
